--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "embla-carousel-autoplay": "^8.0.4",
+    "firebase": "^10.12.2",
     "keep-react": "^1.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
