--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "embla-carousel-autoplay": "^8.0.4",
     "firebase": "^10.12.2",
     "keep-react": "^1.3.0",
@@ -19,6 +20,8 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
