--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
     "embla-carousel-autoplay": "^8.0.4",
     "firebase": "^10.12.2",
